Opret basale ElevAfventerActivity og ElevInsufflatorActivity
Signed-off-by: petertbdtu <s175210@student.dtu.dk>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">gr09.8 - Simulator til kirurgisk traening</string>
+    <string name="afventerForbindelse">Afventer instruktør</string>
 </resources>
