tilføjer activity intro & vaelg rolle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,14 @@
     <string name="volumenTitel">Volume</string>
     <string name="tubeblokeretTekst">Tube Obstructed</string>
     <string name="overtrykTekst">Excessive Pressure</string>
+    <string name="Intro_Titel">Kirugisk Simulator</string>
+    <string name="Intro_UnderTitel">Træning af studerende</string>
+    <string name="intro_logo">Logo</string>
+    <string name="VaelgRolle_Titel">Vælg visning</string>
+    <string name="VaelgRolle_InsufflatorTitel">Insufflator Visning</string>
+    <string name="VaelgRolle_InsufflatorText">Simulerer en aktiv insufflator  styret af en instruktør</string>
+    <string name="VaelgRolle_InstruktørTitel">Instruktør visning</string>
+    <string name="VaelgRolle_InstruktørText">Kontrollerer simuleringen.  Kan oprette, redigere og  starte brugsscenarier</string>
     <string name="vaelg_scenarie_overskrift">Brugsscenarier</string>
     <string name="vaelg_scenarie_knap_nyt_scenarie">Opret nyt</string>
     <string name="scenarie_dummy_navn">Scenarienavn</string>
