--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="scenarie_dummy_navn">Scenarienavn</string>
     <string name="rediger">Rediger</string>
     <string name="slet">Slet</string>
+    <string name="VaelgOpgave_Titel">Vælg Opgave</string>
+    <string name="VaelgOpgave_BrugsTitel">Brugsscenairer</string>
+    <string name="VaelgOpgave_ForbindTabletTitel">Forbind til tablet</string>
+    <string name="VaelgOpgave_BrugsText">Opret eller rediger brugsscenarier</string>
+    <string name="VaelgOpgave_forbindTabletText">Forbind til tablet og start simulering</string>
 </resources>
