--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="VaelgTablet_HentResultater">Resultater</string>
     <string name="VaelgTablet_KnapSlet">Slet</string>
     <string name="VaelgTablet_KnapResultater">Resultater</string>
+    <string name="title_activity_rediger_aktivitet">redigerAktivitetActivity</string>
 </resources>
