--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="VaelgTablet_KnapSlet">Slet</string>
     <string name="VaelgTablet_KnapResultater">Resultater</string>
     <string name="title_activity_rediger_aktivitet">redigerAktivitetActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
