--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Tablets">Tablets</string>
     <string name="Ny">Ny</string>
+    <string name="tablet_liste_element_valgBrugs">Vælg Brugssenarie</string>
+    <string name="tablet_liste_element_selog">Se Log</string>
+    <string name="tablet_liste_element_slet">Slet</string>
+    <string name="send_brugss">Send</string>
+
 </resources>
