Flyt text ud i strings.xml og fjern irriterende fejl
Signed-off-by: petertbdtu <s175210@student.dtu.dk>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,10 @@
     <string name="tablet_liste_element_slet">Slet</string>
     <string name="btnFunctionValue">Tilføj</string>
     <string name="VaelgTablet_SendTilAlle">Send til alle</string>
+    <string name="displays00Placeholder">00</string>
+    <string name="trykEnhed">mmHg</string>
+    <string name="flowEnhed">L/s</string>
+    <string name="volumenEnhed">L</string>
 
 
 </resources>
