--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,8 @@
     <string name="trykEnhed">mmHg</string>
     <string name="flowEnhed">L/s</string>
     <string name="volumenEnhed">L</string>
+    <string name="adapter_peer_send">SEND</string>
+    <string name="adapter_peer_forbind">FORBIND</string>
 
 
 </resources>
