Fix enhed på flowrate L/s til L/min
Signed-off-by: petertbdtu <s175210@student.dtu.dk>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="VaelgTablet_SendTilAlle">Send til alle</string>
     <string name="displays00Placeholder">00</string>
     <string name="trykEnhed">mmHg</string>
-    <string name="flowEnhed">L/s</string>
+    <string name="flowEnhed">L/min</string>
     <string name="volumenEnhed">L</string>
     <string name="adapter_peer_send">SEND</string>
     <string name="adapter_peer_forbind">FORBIND</string>
